<resources>
    <string name="app_name">Movie Flix</string>

    <string name="introduction">Introdução</string>
    <string name="read_with_attention">Leia com atenção!</string>
    <string name="the_best_trailers">Os melhores trailers</string>
    <string name="just_here">Apenas aqui!</string>
    <string name="come_on">Vamos lá?</string>
    <string name="without_wasting_any_more_time">Sem perder mais tempo.</string>
    <string name="save">Salvar</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="logar">Logar</string>
    <string name="cadastre">Cadastre-se</string>
    <string name="error_default">Opss, algo deu errado, tente novamente mais tarde!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Detalhes</string>
    <string name="profile">Perfil</string>
    <string name="search_movie">Buscar Filme</string>
    <string name="logout">Sair</string>
    <string name="date_release">Data da liberação: </string>

    <string name="error_trailer">Trailer não disponível!</string>
    <string name="error_open_movie">Erro ao abrir o vídeo!</string>
    <string name="title_registry">Faça seu cadastro</string>
    <string name="settings">Configurações</string>
    <string name="error_user_password">Usuário ou senha inválidos!</string>
</resources>
