<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/colorGray">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:inputType="textWebPassword"
        android:hint="@string/password"
        android:background="@drawable/background_text"
        android:textColorLink="@android:color/white"
        android:textColorHint="@android:color/white"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:text="@string/logar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button"
        android:textColorLink="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <TextView
        android:text="@string/cadastre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegister"
        android:textColorLink="@android:color/white"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>